[tool.poetry]
name = "rrfit"
version = "0.1.0"
description = ""
authors = ["T1-Team <deleonlab@princeton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lmfit = "^1.3.1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
