[tool.poetry]
name = "rrfit"
version = "1.1.0"
description = ""
authors = ["T1-Team <deleonlab@princeton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
lmfit = "^1.3.1"
numpy = ">=1.26.4, <3.0"
matplotlib = "^3.8.4"
h5py = "^3.11.0"
scipy = "^1.14.1"
uncertainties = "^3.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
black = "^22.10.0"
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
